@@ -1,0 +1,11 @@
+#include <stdio.h>
+
+int main(){
+    int a;
+
+    printf("enter a number:");
+    scanf("%d", &a);
+    printf("Your number: %d\n", a);
+
+    return 0;
+}
